<?xml version='1.0'?>
<!--
 Copyright (c) 2010-2012 Engine Yard, Inc.
 Copyright (c) 2007-2009 Sun Microsystems, Inc.
 This source code is available under the MIT license.
 See the file LICENSE.txt for details.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.jruby.rack</groupId>
  <artifactId>jruby-rack</artifactId>
  <version>1.3.0-SNAPSHOT</version>
  <name>JRuby-Rack</name>
  <url>https://github.com/jruby/jruby-rack/</url>
  <description>
    A servlet bridge for (Ruby-based) Rack applications that allow them
    to run in Java Application servers using JRuby.
  </description>

  <properties>
    <jruby.version>9.4.13.0</jruby.version>
    <jruby.maven.plugins.version>3.0.6</jruby.maven.plugins.version>
    <gem.home>${project.build.directory}/rubygems</gem.home>
    <slf4j.version>2.0.17</slf4j.version>
    <spring.version>6.2.9</spring.version>
  </properties>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/jruby/jruby-rack/issues</url>
  </issueManagement>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <scm>
    <connection>scm:git:git://github.com/jruby/jruby-rack.git</connection>
    <developerConnection>scm:git:git@github.com:jruby/jruby-rack.git</developerConnection>
    <url>https://github.com/jruby/jruby-rack/</url>
    <tag>HEAD</tag>
  </scm>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://www.opensource.org/licenses/mit-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>nicksieger</id>
      <name>Nick Sieger</name>
      <email>nicksieger@gmail.com</email>
    </developer>
    <developer>
      <id>calavera</id>
      <name>David Calavera</name>
    </developer>
    <developer>
      <id>kares</id>
      <name>Karol Bucek</name>
      <email>self@kares.org</email>
    </developer>
  </developers>

  <repositories>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>mavengems</id>
      <url>mavengem:https://rubygems.org</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.jruby</groupId>
      <artifactId>jruby-core</artifactId>
      <version>${jruby.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet.jsp</groupId>
      <artifactId>jakarta.servlet.jsp-api</artifactId>
      <version>4.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.3.5</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.el</groupId>
      <artifactId>jakarta.el-api</artifactId>
      <version>6.0.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <extensions>
      <extension>
        <groupId>org.jruby.maven</groupId>
        <artifactId>mavengem-wagon</artifactId>
        <version>2.0.2</version>
      </extension>
    </extensions>
    <defaultGoal>install</defaultGoal>
    <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>${basedir}/src/main/ruby</directory>
      </resource>
      <resource>
        <directory>${basedir}/src/main/tld</directory>
        <targetPath>META-INF</targetPath>
      </resource>
    </resources>
    <testSourceDirectory>${basedir}/src/spec/java</testSourceDirectory>
    <testResources>
      <testResource>
        <directory>${basedir}/src/spec/ruby</directory>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.6.3</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.3</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.1</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <!-- .jars for tests to pick up, skipped with -Dmdep.skip=true -->
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <excludeGroupIds>org.jruby,rubygems</excludeGroupIds>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.1.4</version>
      </plugin>
      <plugin>
        <groupId>org.jruby.maven</groupId>
        <artifactId>bundler-maven-plugin</artifactId>
        <version>${jruby.maven.plugins.version}</version>
        <executions>
          <execution>
            <id>bundle-install</id>
            <phase>test</phase>
            <goals><goal>install</goal></goals>
            <configuration>
              <jrubyVersion>${jruby.version}</jrubyVersion>
              <local>false</local>
              <quiet>false</quiet>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jruby.maven</groupId>
        <artifactId>rake-maven-plugin</artifactId>
        <version>${jruby.maven.plugins.version}</version>
        <configuration>
          <jrubyVersion>${jruby.version}</jrubyVersion>
        </configuration>
        <executions>
          <execution>
            <id>rake-spec</id>
            <phase>test</phase>
            <goals><goal>rake</goal></goals>
            <configuration>
              <args>speconly SKIP_SPECS=${maven.test.skip}</args>
            </configuration>
          </execution>
          <execution>
            <!-- additional (ruby) generated resources -->
            <id>rake-resources</id>
            <phase>prepare-package</phase>
            <!-- bind "late" so we do not run during compile/test-compile -->
            <goals><goal>rake</goal></goals>
            <configuration>
              <args>resources VERSION=${project.version}</args>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.7.0</version>
        <extensions>true</extensions>
        <configuration>
           <serverId>ossrh</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>false</autoReleaseAfterClose>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.18.0</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.11.2</version>
            <configuration>
              <tags>
                <tag>
                  <name>apiNote</name>
                  <placement>a</placement>
                  <head>API:</head>
                </tag>
                <tag>
                  <name>implNote</name>
                  <placement>a</placement>
                  <head>NOTE:</head>
                </tag>
              </tags>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
